data/derived/fa15/progs/unify/prog0475.ml.out
Characters 78-79:
  | (f, (h1, h2)) -> if h2 then wwhile f h1 else h1;;
                                       ^
Error: This expression has type 'a but an expression was expected of type
         'a * ('b * bool)
       The type variable 'a occurs inside 'a * ('b * bool)
